Fix display on mobile and tablet, Add some class to do nav on mobile and tablet

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -1,5 +1,4 @@
-/* Mobile responsive */
-
+/* Grid system */
 .grid {
     width: 100%;
     display: block;
@@ -291,22 +290,19 @@
         margin-left: 91.66667%;
     }
 }
-
-
-
 /* PC medium resolution  */
 @media (min-width: 1113px) {
     .row {
-        margin-left: -12px;
-        margin-right: -12px;
+        margin-left: -6px;
+        margin-right: -6px;
     }
     .row.sm-gutter {
         margin-left: -5px;
         margin-right: -5px;
     }
     .col {
-        padding-left: 12px;
-        padding-right: 12px;
+        padding-left: 6px;
+        padding-right: 6px;
     }
     .row.sm-gutter.col {
         padding-left: 5px;
