--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -32,6 +32,43 @@
         display: flex;
     }
 
+    .header__mobile-overlay {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: 1;
+    }
+
+    .category__mobile {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 320px;
+        background-color: #fff;
+        z-index: 2;
+    }
+
+    .category__mobile-heading {
+
+    }
+
+    .category__mobile-list {
+
+    }
+
+    .category__mobile-item {
+
+    }
+
+    .category__mobile-item-link {
+
+    }
+
+
     .app__container {
         margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
     }
@@ -41,6 +78,10 @@
     }
 
     .mobile-category {
+        display: block;
+    }
+
+    .header__mobile-nav {
         display: block;
     }
 }
@@ -105,6 +146,7 @@
             top: var(--header-height);
         }
     }
+
 
     .header__search-history {
         position: fixed;
